--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
         <div class="line">
           <div class="left">
             <div class="content">
-              <span class="spanSlow">Coming</span>
+              <span class="spanSlow">Vijesh</span>
             </div>
           </div><!--
           --><div class="right">
             <div class="content">
-              <span class="spanSlow">Coming</span>
+              <span class="spanSlow">Vijesh</span>
             </div>
           </div>
           </div>
           <div class="line">
               <div class="left">
                 <div class="content">
-                  <span class="spanFast">soon!</span>
+                  <span class="spanFast">Gowda</span>
                 </div>
               </div><!--
               --><div class="right">
                 <div class="content">
-                  <span class="spanFast">soon!</span>
+                  <span class="spanFast">Gowda</span>
                 </div>
               </div>
             </div>
