--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           <div class="line">
               <div class="left">
                 <div class="content">
-                  <span class="spanFast">Gowda</span>
+                  <span class="spanFast">K Gowda</span>
                 </div>
               </div><!--
               --><div class="right">
                 <div class="content">
-                  <span class="spanFast">Gowda</span>
+                  <span class="spanFast">K Gowda</span>
                 </div>
               </div>
             </div>
